fix missing translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,7 @@
   "A8mNJ7": "Are you a sponsor?",
   "DYe0/0": "SW",
   "Dap8yY": "S",
+  "FnRTEV": "Average",
   "Iwz+XF": "Matching launch/selection",
   "JNzOh2": "Declared flights",
   "Ntypeb": "Mar",
@@ -26,6 +27,7 @@
   "lsI6+i": "Feb",
   "mcQmzA": "E",
   "me6E3h": "Total score",
+  "oLkLww": "Score",
   "ojsSBF": "Max score",
   "uD5roI": "NW",
   "vICE/x": "Apr",
