--- a/lang/fr.json
+++ b/lang/fr.json
@@ -8,6 +8,7 @@
     "A8mNJ7": "T'es un sponsor?",
     "uD5roI": "NO",
     "Dap8yY": "S",
+    "FnRTEV": "Moyenne",
     "Iwz+XF": "Dont du déco/critères",
     "JNzOh2": "Vols",
     "Ntypeb": "Mar",
@@ -26,6 +27,7 @@
     "j82jO6": "SE",
     "lsI6+i": "Fev",
     "mcQmzA": "E",
+    "oLkLww": "Score",
     "me6E3h": "Score cumulé",
     "ojsSBF": "Score maximal",
     "vICE/x": "Avr",
