fix missing translation

--- a/lang/en.json
+++ b/lang/en.json
@@ -22,6 +22,7 @@
   "g0CIY6": "Flights",
   "g7daoL": "Dec",
   "gAb0kG": "Select a launch location on the map",
+  "h3ShxL": "Closing",
   "iPtQUl": "Jul",
   "j82jO6": "SE",
   "lsI6+i": "Feb",
