--- a/lang/fr.json
+++ b/lang/fr.json
@@ -23,6 +23,7 @@
     "g0CIY6": "Vols",
     "g7daoL": "Dec",
     "gAb0kG": "Choisissez un décollage sur la carte",
+    "h3ShxL": "Bouclage",
     "iPtQUl": "Jul",
     "j82jO6": "SE",
     "lsI6+i": "Fev",
