add yearly wind averages

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,7 @@
   "2eQSom": "Aug",
   "3mcx52": "Jan",
   "6Uae/q": "Oct",
+  "88r8IX": "Yearly average wind",
   "8HVIIN": "NE",
   "A8mNJ7": "Are you a sponsor?",
   "DYe0/0": "SW",
