--- a/lang/fr.json
+++ b/lang/fr.json
@@ -4,6 +4,7 @@
     "2eQSom": "Aoû",
     "3mcx52": "Jan",
     "6Uae/q": "Oct",
+    "88r8IX": "Vent moyen annuel",
     "8HVIIN": "NE",
     "A8mNJ7": "T'es un sponsor?",
     "uD5roI": "NO",
