add wind distribution for each route

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,7 @@
   "RXBcq1": "a project by",
   "TS8xq9": "launch",
   "YQN3JK": "W",
+  "Z3+fag": "Wind distribution",
   "aV/c/P": "Sep",
   "azsAaq": "N",
   "bVgjEz": "YOU?",
