--- a/lang/fr.json
+++ b/lang/fr.json
@@ -21,6 +21,7 @@
     "azsAaq": "N",
     "bVgjEz": "TOI?",
     "YQN3JK": "O",
+    "Z3+fag": "Rose des vents",
     "g0CIY6": "Vols",
     "g7daoL": "Dec",
     "gAb0kG": "Choisissez un décollage sur la carte",
