display individual flights from launch to landing

--- a/lang/en.json
+++ b/lang/en.json
@@ -21,6 +21,7 @@
   "aV/c/P": "Sep",
   "azsAaq": "N",
   "bVgjEz": "YOU?",
+  "ewx2b7": "Launch",
   "g0CIY6": "Flights",
   "g7daoL": "Dec",
   "gAb0kG": "Select a launch location on the map",
@@ -32,6 +33,7 @@
   "me6E3h": "Total score",
   "oLkLww": "Score",
   "ojsSBF": "Max score",
+  "sRp4UE": "Landing",
   "uD5roI": "NW",
   "vICE/x": "Apr",
   "zUpHdf": "May"
