--- a/lang/fr.json
+++ b/lang/fr.json
@@ -20,6 +20,7 @@
     "aV/c/P": "Sep",
     "azsAaq": "N",
     "bVgjEz": "TOI?",
+    "ewx2b7": "Décollage",
     "YQN3JK": "O",
     "Z3+fag": "Rose des vents",
     "g0CIY6": "Vols",
@@ -33,6 +34,7 @@
     "oLkLww": "Score",
     "me6E3h": "Score cumulé",
     "ojsSBF": "Score maximal",
+    "sRp4UE": "Atterrissage",
     "vICE/x": "Avr",
     "zUpHdf": "Mai"
 }
