hide individual flights by default

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,7 @@
   "OOkYHt": "Nov",
   "RXBcq1": "a project by",
   "TS8xq9": "launch",
+  "U/1MQI": "Hide flights",
   "YQN3JK": "W",
   "Z3+fag": "Wind distribution",
   "aV/c/P": "Sep",
@@ -33,6 +34,7 @@
   "me6E3h": "Total score",
   "oLkLww": "Score",
   "ojsSBF": "Max score",
+  "sB2LtZ": "Unroll flights",
   "sRp4UE": "Landing",
   "uD5roI": "NW",
   "vICE/x": "Apr",
