--- a/lang/fr.json
+++ b/lang/fr.json
@@ -16,6 +16,7 @@
     "OOkYHt": "Nov",
     "RXBcq1": "un projet de",
     "TS8xq9": "déco",
+    "U/1MQI": "Cacher les vols",
     "DYe0/0": "SO",
     "aV/c/P": "Sep",
     "azsAaq": "N",
@@ -34,6 +35,7 @@
     "oLkLww": "Score",
     "me6E3h": "Score cumulé",
     "ojsSBF": "Score maximal",
+    "sB2LtZ": "Dérouler les vols",
     "sRp4UE": "Atterrissage",
     "vICE/x": "Avr",
     "zUpHdf": "Mai"
